--- a/RxJavaOperator/app/src/main/AndroidManifest.xml
+++ b/RxJavaOperator/app/src/main/AndroidManifest.xml
@@ -10,16 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RxJavaOperator">
         <activity
-            android:name=".LiveSessionActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".Problems_On_RxJava_Day1"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".LiveSessionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
