--- a/NewsBreeze/app/build.gradle
+++ b/NewsBreeze/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'kotlin-android-extensions'
 }
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdk 31
