--- a/NewsBreeze/build.gradle
+++ b/NewsBreeze/build.gradle
@@ -8,6 +8,9 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
 
+        //addSafeGuard
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+
         //hilt
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
         // NOTE: Do not place your application dependencies here; they belong
